--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('https://i.ibb.co/5WLXCG0h/download.jpg');
+            background-image: url('images/WhatsApp\ Image\ 2026-02-12\ at\ 7.57.45\ PM.jpeg');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -102,7 +102,7 @@
             position: fixed;
             inset: 0;
             display: none;
-            background-image: url('https://i.ibb.co/sdcRh6Tp/Red-Simple-Valentine-s-Day-Instagram-Post.png');
+            background-image: url('images/WhatsApp\ Image\ 2026-02-12\ at\ 7.57.24\ PM.jpeg');
             background-size: cover;
             background-position: center;
             z-index: 9999;
