--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('images/WhatsApp\ Image\ 2026-02-12\ at\ 7.57.45\ PM.jpeg');
+            background-image: url('images/one.jpeg');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -102,7 +102,7 @@
             position: fixed;
             inset: 0;
             display: none;
-            background-image: url('images/WhatsApp\ Image\ 2026-02-12\ at\ 7.57.24\ PM.jpeg');
+            background-image: url('images/two.jpeg');
             background-size: cover;
             background-position: center;
             z-index: 9999;
@@ -166,7 +166,7 @@
         <div class="header-text">
             <h2>WANNA BE MY</h2>
             <h1>valentine?</h1>
-            <p>ALWAYS HAVE ME SMILIN'</p>
+            <p>❤️ALWAYS HAVE ME SMILIN MOMMA❤️'</p>
         </div>
 
         <div style="display:flex; justify-content:center; gap:20px; margin-top:30px;">
@@ -190,11 +190,11 @@
     const music = document.getElementById('music');
 
     const phrases = [
-        "You’re my favorite person fr. Happy Valentine’s❤️",
-        "You my world baby. That’s enough❤️",
-        "Wanna lockin' with you❤️",
-        "You the Girl i prayed for❤️",
-        "Lav you my baby❤️"
+        "Happy Valentine’s to my first and forever best friend. Love you, Mom! ❤️",
+        "To the woman who does it all: I hope your day is as wonderful as you are. ❤️",
+        "Wanna lockin' to make you happy always is my goal❤️",
+        "Thank you for always being there for me❤️",
+        "Lav you my Momma❤️"
     ];
 
     yesBtn.addEventListener('click', () => {
